--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
